[metadata]
name = exabgp
author = OpenSourceRouting
author_email = info@opensourcerouting.org
url = https://github.com/opensourcerouting/exabgp
version = attr: exabgp.version.version
description = OpenSourceRouting.org fork of fixed ExaBGP for FRRouting topotests
long_description = file: README.rst, CHANGELOG.rst
keywords = BGP, ipv4, ipv6, mpls, vpls, flowspec, bgp-ls, SDN, HA, DDOS
license = BSD 3-Clause License
classifiers =
	Development Status :: 5 - Production/Stable
	Environment :: Console
	Intended Audience :: System Administrators
	Intended Audience :: Telecommunications Industry
	License :: OSI Approved :: BSD License
	Operating System :: POSIX
	Operating System :: MacOS :: MacOS X
	Programming Language :: Python
	Programming Language :: Python :: 3.7
	Topic :: Internet

[options]
zip_safe = False
include_package_data = True
packages = find:
package_dir=
    =lib
install_requires =
	setuptools

[options.packages.find]
where = lib
exclude =

[options.entry_points]
console_scripts =
    exabgp = exabgp.application:run_exabgp
    exabgpcli = exabgp.application:run_cli
    exabgp-cli = exabgp.application:run_cli
    exabgp-healthcheck = exabgp.application:run_healthcheck

[options.package_data]
* = *.txt, *.rst
